Fix [display] - responsive text overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -657,4 +657,8 @@ body {
       padding: 20px 4px;
     }
   }
+
+  .fullpage-wrapper {
+    padding: 20px 8px;
+  }
 }
